--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "react": "^18.2.0",
