--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@sanity/client": "^6.28.3",
     "@studio-freight/lenis": "^1.0.42",
     "aos": "^2.3.4",
     "framer-motion": "^12.4.7",
